# kodadocs

./: .gitignore  README.md
.github/: FUNDING.yml
kodadocs/: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.sh
kodadocs-web/: package-lock.json  package.json
kodadocs-web/src/components/: BeforeAfter.astro  Features.astro  Footer.astro  FooterCTA.astro  Hero.astro  HowItWorks.astro  Nav.astro  Pricing.astro
kodadocs-web/src/layouts/: Layout.astro
kodadocs-web/src/pages/: index.astro
kodadocs-web/src/styles/: global.css
kodadocs/.github/workflows/: ci.yml  publish.yml
kodadocs/skill/: README.md  kodadocs.md
kodadocs/src/kodadocs/: __init__.py  main.py  models.py  orchestrator.py
kodadocs/src/kodadocs/mcp/: server.py
kodadocs/src/kodadocs/mcp/tools/: analysis.py  annotation.py  capture.py  deploy.py  discovery.py  framework.py  manifest.py  output.py
kodadocs/src/kodadocs/pipeline/: analysis.py  annotation.py  capture.py  deploy.py  discovery.py  enrichment.py  gif_recorder.py  output.py  targeted_capture.py  update.py
kodadocs/src/kodadocs/themes/: loader.py
kodadocs/src/kodadocs/themes/presets/: dark-modern.json  default.json  docs-classic.json  minimal.json  playful.json  professional.json
kodadocs/src/kodadocs/utils/: badge.py  deploy.py  framework.py  license.py  messaging.py  vitepress.py
kodadocs/tests/: conftest.py  test_analysis.py  test_annotation.py  test_badge.py  test_capture.py  test_deploy.py  test_deploy_commands.py  test_deploy_kodadocs.py  test_discovery.py  test_enrichment.py  test_framework.py  test_license.py  test_mcp_analysis.py  test_mcp_annotation.py  test_mcp_capture.py  test_mcp_cli.py  test_mcp_discovery.py  test_mcp_framework.py  test_mcp_manifest.py  test_mcp_output.py  test_models.py  test_orchestrator.py  test_output.py  test_theme_loader.py  test_update.py
scripts/: generate_demo_gif.py
